# youtube-to-text

./: .gitignore  agent.md  package-lock.json  package.json  readme.md
.claude/commands/: create-sdd-feature.md  pre-build.md  sdd-init-legacy.md  sdd-replan.md  (+1 more)
backlog/: non-en-transcript-faild.md
deploy/: .env.example  Caddyfile  README.md  docker-compose.prod.yml
docs/: data-storage.md  seo-requirements.md  transcript-format.md
html/: index.html  styles.css
specs/: mission.md  roadmap.md  tech-stack.md
src/: .gitignore  package-lock.json  package.json  tsconfig.tsbuildinfo
supabase/: config.toml  seed.sql
tasks/: 2026-03-06-python-worker-yt-dlp.md  2026-04-22-worker-online-setup.md  non-en-transcript-faild.md  plan.md  transcript-page.md  v0.2-auth-and-jobs.md  v0.3-worker-pipeline.md  v0.4-homepage-real-data.md  v0.4-multilang-worker.md  v0.5-deploy.md  youtube_cookies_fix.md
web/: agent.md  middleware.ts  package-lock.json  package.json
worker/: agent.md  package-lock.json  package.json  pyproject.toml
worker/scratch/: debug_cookies.py
worker/src/: config.py  config.ts  db.py  db.ts  index.ts  main.py  models.py  slugify.py  types.ts
worker/src/pipeline/: fetch-transcript.ts  fetch_transcript.py  generate-markdown.ts  generate_markdown.py  index.ts  parse_markdown.py  process-with-llm.ts  process_with_llm.py  run.py  translate_with_llm.py  upload-to-storage.ts  upload_to_storage.py
worker/tests/: conftest.py  test_parse_markdown.py  test_uc1_no_subs.py  test_uc2_translate_from_en.py  test_uc3_create_en_dependency.py  test_uc4_no_en_subs.py
(+141 files in other folders)
