[project]
name = "youtube-to-text-worker"
version = "0.4.0"
description = "Transcript processing worker using yt-dlp and OpenAI"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp",
    "supabase",
    "openai",
    "python-dotenv",
    "Unidecode",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
worker = "src.main:main"
